<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes, Typos">
    <string name="app_name">Desperately Seeking Doctors - DsDr</string>
    <string name="app_name2">Desperately Seeking Doctors</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="hotline_emergency">জরুরী হটলাইনসমূহ</string>
    <string name="test_lab">টেস্টিং ল্যাবসমূহ</string>
    <string name="exit">Exit</string>
    <string name="nat_help">ন্যাশনাল কল সেন্টার</string>
    <string name="sastho">স্বাস্থ্য বাতায়ন</string>
    <string name="iedcr">আইইডিসিআর হটলাইন - IEDCR Hotline</string>
    <string name="bissesoggo">বিশেষজ্ঞ হেল্প লাইন </string>
    <string name="nat_help2">ন্যাশনাল হেল্পলাইন</string>
    <string name="find_a_physician">Ask A Doctor to Help</string>
    <string name="available_10am">Available 10AM - 6PM</string>
    <string name="available_5pm">Available on 5PM - 10PM (Call Only)</string>
    <string name="item">Item</string>
    <string name="doctor">doctor</string>
    <string name="call">call</string>
    <string name="dhk">ঢাকা বিভাগ</string>
    <string name="ctg">চট্টগ্রাম বিভাগ</string>
    <string name="raj">রাজশাহী বিভাগ</string>
    <string name="khu">খুলনা বিভাগ</string>
    <string name="bor">বরিশাল বিভাগ</string>
    <string name="syl">সিলেট বিভাগ</string>
    <string name="rang">রংপুর বিভাগ</string>
    <string name="mym">ময়মনসিংহ বিভাগ</string>
    <string name="emergence_hot">ইমার্জেন্সি হটলাইন</string>
    <string name="special_hospital">বিশেষায়িত হাসপাতালসমূহ</string>
    <string name="icu_hot">ICU হটলাইন</string>
    <string name="dsdr_comm">Join DsDr. Group</string>
    <string name="community">Community</string>
    <string name="emergency_corner">Emergency Corner</string>
    <string name="know_MORE">Trending Health Issues</string>
    <string name="call_an_ambulance">Call an Ambulance Anytime</string>
    <string name="visit_facebook">Dr. Saklayen\'s Page</string>
    <string name="visit_youtube">Dr. Saklayen\'s Youtube Channel</string>
    <string name="zilla">জেলাভিত্তিক ডক্টর চেম্বারসমূহ</string>
    <string name="health_t">হেলথ টিপস</string>
    <string name="amb">অ্যাম্বুলেন্স সেবা</string>
    <string name="dctr">ডক্টরস হেল্পলাইন</string>
    <string name="dent">ডেন্টাল কর্নার</string>
    <string name="dent_d">Ask A Dentist for Help</string>
    <string-array name="teledentists">
        <item>ডাঃ আরিফুর রহমান</item>
        <item>ডাঃ মোছাঃ আমিনা খাতুন</item>
        <item>ডাঃ মুশফিকুর রুহান</item>
        <item>ডাঃ গাজী শাহ মোহাম্মদ শিশির</item>
        <item>ডাঃ শাফী পারভেজ</item>
        <item>ডা অর্ণব দাশ</item>
        <item>ডাঃ আফরিনা বিনতে ইসলাম</item>
        <item>ডাঃ সীমান্ত দাস</item>
        <item>ডাঃ আঁখি আক্তার আন্নী</item>
    </string-array>
    <string-array name="teledentist_no">
        <item>01714-000783</item>
        <item>01723-310490</item>
        <item>01710-077399</item>
        <item>01913-542664</item>
        <item>01716-310437</item>
        <item>01645-278409</item>
        <item>01842-996090</item>
        <item>01828-698829</item>
        <item>01745-966600</item>
    </string-array>
    <string-array name="chittagong">
        <item>মিডিয়া এ্যাম্বুলেন্স</item>
        <item>আলফা এ্যাম্বুলেন্স</item>
        <item>ডলফিন এ্যাম্বুলেন্স</item>
        <item>আলিফ এ্যাম্বুলেন্স</item>
        <item>ফায়ার বিগ্রেড এ্যাম্বুলেন্স</item>
        <item>সেন্টার পয়েন্ট হাসপাতাল প্রাঃ লিঃ</item>
        <item>চট্টগ্রাম সদর জেনারেল হাসপাতাল, আন্দরকিল্লা রোড, চট্টগ্রাম</item>
        <item>চট্টগ্রাম মেডিকেল কলেজ, ৫৭ কে বি ফজলুল কবির রোড</item>
        <item>উপশম হাসপাতাল</item>
        <item>রেলওয়ে হাসপাতাল, সি আর বি ডি রোড</item>
        <item>পলি হাসপাতাল, সি আর বি ডি রোড</item>
        <item>মর্ডান এ্যাম্বুলেন্স সার্ভিস, ২০ কে বি ফজলুল কাদের রোড</item>
    </string-array>
    <string-array name="ctg1">
        <item>031650000</item>
        <item>01819379595</item>
        <item>01711750000</item>
    </string-array>
    <string-array name="ctg2">
        <item>01819327070</item>
    </string-array>
    <string-array name="ctg3">
        <item>01819396161</item>
        <item>01977880000</item>
        <item>01976889999</item>
        <item>01721443232</item>
    </string-array>
    <string-array name="ctg4">
        <item>031657574</item>
        <item>01819380000</item>
    </string-array>
    <string-array name="ctg5">
        <item>031630334</item>
    </string-array>
    <string-array name="ctg6">
        <item>01819613505</item>
    </string-array>
    <string-array name="ctg7">
        <item>01874808388</item>
        <item>01814480900</item>
    </string-array>
    <string-array name="ctg8">
        <item>01819-637685</item>
    </string-array>
    <string-array name="ctg9">
        <item>031-637243</item>
    </string-array>
    <string-array name="ctg10">
        <item>031-502220</item>
    </string-array>
    <string-array name="ctg11">
        <item>031-502024</item>
        <item>505021</item>
        <item>505022</item>
        <item>505023</item>
        <item>505024</item>
    </string-array>
    <string-array name="ctg12">
        <item>031-639730</item>
        <item>0154633214</item>
        <item>01716074497</item>
    </string-array>
    <string-array name="rajshahi">
        <item>ইসলামী ব্যাংক হাসপাতাল</item>
        <item>ফায়ার সার্ভিস</item>
        <item>রাজশাহী মেডিক্যাল</item>
        <item>পাবা মেডিক্যাল হাসপাতাল</item>
        <item>পুলিশ হাসপাতাল</item>
        <item>সদর হাসপাতাল</item>
        <item>টি বি হাসপাতাল</item>
        <item>ইউনিভার্সিটি মেডিক্যাল</item>
        <item>বরেন্দ্র মেডিকেল কলেজ হাসপাতাল, ১৭৯/১ ছোট বনগ্রাম</item>
        <item>মোহনগর ক্লিনিক, মিশনের মোড়, রাজপাড়া</item>
        <item>আমানা হসপিটাল লিঃ, ঝাউতলা, রাজপাড়া</item>
        <item>শিমুল সিয়্যাম সার্ভিস, মাইক্রো স্ট্যান্ড</item>
    </string-array>
    <string-array name="raj0">
        <item>+8801719978197</item>
    </string-array>
    <string-array name="raj1">
        <item>772702</item>
        <item>774224</item>
    </string-array>
    <string-array name="raj2">
        <item>776000</item>
        <item>776001</item>
        <item>776002</item>
        <item>776003</item>
        <item>776004</item>
        <item>776005</item>
        <item>776006</item>
        <item>776007-9</item>
        <item>774335</item>
    </string-array>
    <string-array name="raj3">
        <item>775709</item>
        <item>775606</item>
    </string-array>
    <string-array name="raj4">
        <item>774308</item>
    </string-array>
    <string-array name="raj5">
        <item>775863</item>
    </string-array>
    <string-array name="raj6">
        <item>774558</item>
    </string-array>
    <string-array name="raj7">
        <item>770169</item>
    </string-array>
    <string-array name="raj8">
        <item>01839186666</item>
    </string-array>
    <string-array name="raj9">
        <item>01736408198</item>
    </string-array>
    <string-array name="raj10">
        <item>01705403621</item>
    </string-array>
    <string-array name="raj11">
        <item>01712678529</item>
        <item>01774718199</item>
    </string-array>
    <string-array name="Dhaka">
        <item>ঢাকা মেডিকেল কলেজ হসপিটালস, ১০০ রমনা, ঢাকা</item>
        <item>বঙ্গবন্ধু শেখ মুজিব মেডিকেল বিশ্ববিদ্যালয় হাসপাতাল, শাহবাগ</item>
        <item>ফায়ার সার্ভিস এ্যাম্বুলেন্স, সিদ্দিকবাজার, গুলিস্থান</item>
        <item>ন্যাশনাল হার্ট ইন্সটিটিউট, শের-এ-বাংলা নগরশের-এ-বাংলা নগর</item>
        <item>এ্যাপোলো হাসপাতাল, বসুন্ধরা</item>
        <item>কার্ডিয়াক এ্যাম্বুলেন্স সার্ভিস, ১১২ কাজী নজরুল ইসলাম ইভিনিউ</item>
        <item>আল মারকাজুল ইসলাম এ্যাম্বুলেন্স সার্ভিস, ২১/১৭ বাবর রোড, মোহাম্মদপুর</item>
        <item>আদ দ্বীন হাসপাতাল, মগবাজার</item>
        <item>আঞ্জুমান-ই-মুফিদুল ইসলাম, কাকরাইল</item>
        <item>জাতীয় অর্থোপেডিক হাসপাতাল, শের-এ-বাংলা নগর</item>
        <item>জাতীয় মানসিক স্বাস্থ্য ইনস্টিটিউট ও হাসপাতাল, শের-এ-বাংলা নগর</item>
        <item>আল হেলাল স্পেশালাইজড হাসপাতাল, মিরপুর</item>
        <item>ইউনাইটেড হাসপাতাল, গুলশান</item>
        <item>আইচি হাসপাতাল, উত্তরা</item>
        <item>মনোয়ারা হাসপাতাল প্রাঃ লিঃ, রমনা</item>
        <item>হলি ফ্যামিলি রেড ক্রিসেন্ট হাসপাতাল, ধানমন্ডি</item>
        <item>ল্যাব এইড, ধানমন্ডি</item>
        <item>জাপান বাংলাদেশ ফ্রেন্ডশীপ হাসপাতাল, ধানমন্ডি</item>
        <item>সালাউদ্দিন স্পেশালাইসড হাসপাতাল, টিকাটুলী</item>
        <item>ধানমন্ডি ক্লিনিক প্রাইভেট লিঃ, ধানমন্ডি</item>
        <item>সেন্টাল হাসপাতাল লিঃ, গ্রীন রোড</item>
        <item>গ্রীন লাইফ হাসপাতাল লিঃ, গ্রীন রোড</item>
        <item>কমফোর্ট হাসপাতাল, গ্রীন রোড</item>
        <item>আল মানার হাসপাতাল, মোহাম্মদপুর</item>
        <item>ইসলামী ব্যাংক হাসপাতাল, কাকরাইল</item>
        <item>আলিফ এ্যাম্বুলেন্স সার্ভিস(২৪ ঘন্টা সার্ভিস)</item>
        <item>রেড ক্রিসেন্ট সোসাইটি এ্যাম্বুলেন্স সার্ভিস(২৪ ঘন্টা সার্ভিস)</item>
    </string-array>
    <string-array name="dhk1">
        <item>+88-02-8626812</item>
        <item>+88-02-8626818</item>
    </string-array>
    <string-array name="dhk2">
        <item>+88-02-9661051</item>
        <item>+88-02-9661052</item>
        <item>+88-02-9661053</item>
    </string-array>
    <string-array name="dhk3">
        <item>+88-02-9555555</item>
        <item>+88-02-955666</item>
        <item>+88-02-955667</item>
        <item>+88-02-9553333</item>
        <item>+88-02-9553334</item>
        <item>+88-02-9553335</item>
        <item>+88-02-9553336</item>
        <item>+88-02-9553337</item>
    </string-array>
    <string-array name="dhk4">
        <item>+88-02-9122561</item>
        <item>+88-02-9122562</item>
        <item>+88-02-9122563</item>
        <item>+88-02-9122564</item>
        <item>+88-02-9122565</item>
        <item>+88-02-9122566</item>
        <item>+88-02-9122567</item>
        <item>+88-02-9122568</item>
        <item>+88-02-9122569</item>
        <item>+88-02-9122570</item>
    </string-array>
    <string-array name="dhk5">
        <item>+880171-4090000</item>
        <item>10878</item>
    </string-array>
    <string-array name="dhk6">
        <item>+8801713-003004</item>
    </string-array>
    <string-array name="dhk7">
        <item>+8802-9127867</item>
        <item>01818-732905</item>
    </string-array>
    <string-array name="dhk8">
        <item>09612345666</item>
    </string-array>
    <string-array name="dhk9">
        <item>+88-02-9336611</item>
        <item>07274435</item>
    </string-array>
    <string-array name="dhk10">
        <item>01720212692</item>
    </string-array>
    <string-array name="dhk11">
        <item>01946465590</item>
    </string-array>
    <string name="meshe">
        ডাঃ সাইমা ইসলাম\nঅ্যাডভাইজার, Desperately Seeking Doctors - DsDr.\nএবং টিম ডিএসডিআর.
    </string>
    <string name="asif1">পরিচালনা ও আইটি সাপোর্ট</string>
    <string name="mes1">সার্বিক তত্ত্বাবধায়নে ও সহযোগীতায়</string>
    <string name="saklayen1">উপদেষ্টা</string>
    <string name="saklayen">
        ডাঃ এস এম জি সাকলায়েন রাসেল\nভাস্কুলার সার্জন ও ব্রডকাস্ট জার্নালিস্ট\nপ্রতিষ্ঠাতা ও এ্যাডমিন,\nDesperately Seeking Doctors - DsDr.
    </string>
    <string name="asif">
        আসিফ-উল ইসলাম\nসফটওয়্যার ইঞ্জিনিয়ার ও টিম লিড @ E-exponential\nমেইলঃ asif07c@gmail.com
    </string>
    <string name="about_app">
        অ্যাপটি Desperately Seeking Doctors - DsDr গ্রুপ দ্বারা পরিচালিত অফিসিয়াল অ্যাপ।\nএটি রেজিস্টার্ড ডাক্তার ও মেডিক্যাল স্টুডেন্ট দ্বারা পরিচালিত।\nসাধারন মানুষকে স্বাস্থ্যবিষয়ক পরামর্শ দিয়ে সাহায্য করার জন্যই এটি নিবেদিত।\n\nএখানে বিদেশী হাসপাতাল বা চিকিৎসকের খোঁজ দেয়া হয়না। এমবিবিএস বা বিডিএস চিকিৎসকরা এখানে সেবা ও পরামর্শ দেন।\n\nসঠিক তথ্য সুচিকিৎসার প্রথম শর্ত। আমরা সে কাজটিই করছি স্বেচ্ছাশ্রমের ভিত্তিতে। এই গ্রুপের  এডমিন বা মডারেটররা সামাজিক দায়বদ্ধতার অংশ হিসেবে চিকিৎসক ও রোগীর আস্থা বাড়াতে কাজ করছেন। তাই এখানে এপস/গ্রুপের মাধ্যমে আর্থিক লেনদেন বা বাণিজ্যিক ভাবে উপকৃত হবার সুযোগ নেই।
    </string>
</resources>